[B]0.2.1[/B]
Migrated from skin.xperience1080-arctic
Thematic consolidation

[B]0.2.2[/B]
Music/Video Fullscreen Info / OSD clock bar cornered
Added option for small music vis info
Added option to disable scrolling text on music vis
Added option to disable view header
Added option to disable clock
Added blue glow borders
Added themes for faded covers
Fixed poster info discart alignment issue for sets
Fixed info tags for movie sets
Fixed overlay for Views > Settings: Video Information
Re-added EPG Colors
Added option for long or short videoosd top bar
Fixed episode info play button not showing

[B]0.2.3[/B]
Big update to PVR section
Added "panel list" view type (replaces info list)
Modified "big list" to be more minimal (removed panel behind)

[B]0.2.4[/B]
Cleanup
  - Video viewtype filenames
  
String localization	
  - MyVideoNav
  - Video Viewtypes
  - Skin Settings
  - MyMusicNav
  - Music Viewtypes
  - Adv Launcher Viewtypes
  - MyPrograms
  
Video Info/OSD show plot on up.
Video Info/OSD clearlogo preference
Timer and Search PVR dialogs
PVR Channel OSD number length fix
PVR Channel OSD revamp
Fixed text color visibility in add on settings

[B]0.2.5[/B]
Revamp of view and power menu
Revamp of Context menu 
  - Still to do: pictures/addons menu
Added options for dark/light osd
Altered plot size for readability
Modified channels and epg osd for pvr readability
Removed videowindow from pvr slide out menu for animation speed/smoothness

[B]0.2.6[/B]
Massive cleanup of unused images, repo size now 55mb
Moved out studioflags, audioflags, to extras folder
Moved out icons to extras folder
Cleaned up leftover code from glass rings, borders and covers
Removed glass edging from simple home screen
Added gap to simplehome screen to make it more consistent with rest of theme
Weather menu
Pictures menu
Fix for profile on simple homescreen so not hidden when favourites visible